[improved][alfresco] Downgraded the requirement of Java to version 1.8 - to ensure compatibility with Alfresco 5